[159663505] Fix page title display on smaller screens

--- a/app/javascript/app/components/nav/nav-styles.scss
+++ b/app/javascript/app/components/nav/nav-styles.scss
@@ -11,6 +11,7 @@ $flag-height: 40px;
 
 .header {
   padding-top: 20px;
+
   @include row();
 }
 
@@ -41,6 +42,7 @@ $flag-height: 40px;
   text-transform: uppercase;
   letter-spacing: 2px;
   justify-content: center;
+  flex-grow: 3;
 
   @media #{$tablet-landscape} {
     font-size: 30px;
